--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,18 @@
-header,#menu{
+:root{
+    --main-color:rgb(255, 220, 106);
+}
+
+header{
     width: 100%;
 }
+
+#title{
+    background-color: var(--main-color);
+    width: 100%;
+}
+
+
+/* MENU */
 
 #fold-btn:checked ~ #nav{
     display: flex;
@@ -8,12 +20,15 @@ header,#menu{
 
 #nav{
     display: none;
-    background-color: rgb(255, 220, 106);
+    background-color: var(--main-color);
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
     transition: display 0.5s ease-in;
+    position: absolute;
+    top:0;
+    z-index: 1;
 } 
 
 #fold-btn{
@@ -22,26 +37,70 @@ header,#menu{
 
 #fold-btn-txt{
     cursor: pointer;
+    z-index: 2;
+    position: absolute;
+    margin-left: 5px;
+    margin-top: 10px;
+    border: transparent solid 5px;
 }
 
-.click-me{
+/* Menu button drawing */
+
+#fold-btn {
+    display: none;
+}
+
+.click-me {
+    position: relative;
     display: block;
-    background-color: black;
-    rotate: 90;
+    background-color: rgb(0, 0, 0);
     width: 30px;
     height: 3px;
-    margin: 3px 0;
+    transition: transform ease 0.3s;
 }
-.click-me::before,.click-me::after{
+
+.click-me::before,
+.click-me::after {
     content: '';
-    display: block;
-    width: 30px;
+    position: absolute;
+    background-color: rgb(0, 0, 0);
     height: 3px;
-    background-color: black;
-    margin: 5px 0;
-    transition: 0.4s;
+    width: 30px;
+    transition: transform ease 0.3s;
+    transform-origin: center center;
 }
 
+.click-me::before {
+    top: -5px;
+}
 
+.click-me::after {
+    top: 5px;
+}
 
-/* hola  */
+/* when menu opened: */
+
+#fold-btn:checked + #fold-btn-txt .click-me {
+    background-color: var(--main-color);
+}
+
+#fold-btn:checked + #fold-btn-txt .click-me::before {
+    transform: rotate(45deg) translateY(7px);
+}
+
+#fold-btn:checked + #fold-btn-txt .click-me::after {
+    transform: rotate(-45deg) translateY(-7px);
+}
+
+@media screen and (max-width:600px) {
+    .click-me {
+        width: 10vw;
+        height: 1vh;
+    }
+    
+    .click-me::before,
+    .click-me::after {
+        width: 10vw;
+        height: 1vh;
+    }
+}
