--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,30 @@
+:root{
+    --background: white;
+}
+
 body{
     margin:0;
     padding: 0;
     border: 0;
     font-family: Arial, Helvetica, sans-serif;
+    color:black;
 }
 
 .horizontal{
     display: flex;
     flex-direction: row;
+}
+
+a{
+    text-decoration: none;
+    color:black;
+}
+a:hover{
+    font-weight: bolder;
+}
+li{
+    list-style: none;
+}
+
+.mid-text{
 }
