--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root{
-    --background: white;
+    --background-color: rgb(11, 0, 107);
+    --background: linear-gradient(to right,rgb(124, 155, 190),rgb(57, 33, 114));
 }
 
 body{
     margin:0;
+    background-color: var(--background-color);
+    background: var(--background);
     padding: 0;
     border: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    color:black;
+    font-family: "Montserrat", sans-serif;
+    color:rgb(255, 255, 255);
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+
 }
 
 .horizontal{
     display: flex;
     flex-direction: row;
+}
+.vertical{
+    display: flex;
+    flex-direction: column;
+}
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 a{
@@ -26,5 +43,8 @@ li{
     list-style: none;
 }
 
-.mid-text{
+.container{
+    width: 70%;
+    display: flex;
+    flex-direction: row;
 }
