--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -111,7 +111,7 @@ header{
 */
 
 footer{
-    position: absolute;
+    position:absolute;
     bottom: 0;
     width: 100%;
     height: 100px;
@@ -131,6 +131,12 @@ footer p{
 }
 .social a i{
     font-size: 30px;
+    transition: 0.3s;
+}
+
+.social a i:hover{
+    font-size: 30px;
+    color:rgb(129, 129, 129);
 }
 
 .info{
